[gd_scene load_steps=2 format=1]

[ext_resource path="res://ui/pick_skill.gd" type="Script" id=1]

[node name="Panel" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 325.0
margin/right = 335.0
margin/bottom = 375.0
script/script = ExtResource( 1 )

[node name="pick_skill" type="OptionButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 5.0
margin/right = 105.0
margin/bottom = 45.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="add_to_player1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 109.0
margin/top = 15.0
margin/right = 137.0
margin/bottom = 35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "1p"
flat = false

[node name="add_to_player2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 142.0
margin/top = 15.0
margin/right = 170.0
margin/bottom = 35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "2p"
flat = false

[connection signal="pressed" from="add_to_player1" to="." method="_on_add_to_player1_pressed"]

[connection signal="pressed" from="add_to_player2" to="." method="_on_add_to_player2_pressed"]


